Correção com z-index no menu fixo da home

--- a/css/home.css
+++ b/css/home.css
@@ -46,6 +46,7 @@ li, a, button{
     justify-content: space-around;
     align-items: center;
     background: rgba(0, 0, 0, .2);
+    z-index: 999;
 
 }
 
